--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,22 @@
 }
 
 #container{
-  display:block;
-  width:100%;
-  align-items: center;
-  height:auto;
-  background:white;
+  background: white;
+  padding: 10px;
+  margin: 0
   
   
 }
+#image{
+  max-width: 100%;
+    display: block;
+    height: auto;
+    margin: 0 auto;
+}
+
 #img-caption{
 font-size: 1.3rem;
 padding: 30px;
-/* font-weight: 500; */
 }
 ul {
     max-width: 550px;
